src/tests/JSXOutsideRender/invalid/case#4/index.jsx
import { useCallback, useEffect, useState } from "react";

const Parent = () => {
    const SecondChild = () => {
        return <div> <SecondChild/> </div>
    }

    const Child = () => {
        return <div> <SecondChild/> </div>
    }

    return (
        <div>
            <Child/>
        </div>
    )
}